Aditional functionality: edit a contact

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,12 +6,28 @@
     align-items: center;
 }
 
-.info {
+.infoMode {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+.info,
+.editForm {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
+.actions {
+    display: flex;
+    gap: 10px;
+}
+
 .data {
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.lastInput {
+    margin-bottom: 5px;
 }
